--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
   },
   "homepage": "https://github.com/abbepiels/Dominos-Pizza-Order#readme",
   "dependencies": {
-    "node-fetch": "^2.6.1"
+    "node-fetch": "^2.6.1",
+    "prompt-sync": "^4.2.0",
+    "scanner.js": "^2.10.3"
   },
   "eslintConfig": {
     "extends": [
